# Rust-Account-Manager

./: Cargo.toml  Main.Dockerfile  README.md  docker-compose.yaml
src/: api.rs  main.rs  safe_user.rs  tweet.rs  user.rs  utils.rs
src/resources/: dict.rs
static/: 404.html
